src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;

    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;

    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;

    --destructive: 0 72.22% 50.59%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 5% 64.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;

    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;

    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
    font-synthesis: none !important;
  }
  body {
    @apply bg-background text-foreground break-keep;
  }
}

/* code block: default settings */

.prose pre {
  @apply p-0 py-4 border-border border bg-transparent;
}

.prose pre span[data-line] {
  @apply px-4;
}

.prose pre > code {
  display: grid;
}

/* code block: horizontal scrollbar */
.prose pre::-webkit-scrollbar {
  display: none;
}

.prose pre {
  scrollbar-width: none;
}

/* code block: theme support */

.light .prose pre[data-theme*=' '] span {
  color: var(--shiki-light);
}

.dark .prose pre[data-theme*=' '] span {
  color: var(--shiki-dark);
}

/* code block: line number */

.prose code[data-line-numbers] {
  counter-reset: line;
}

.prose code[data-line-numbers] > span[data-line]::before {
  counter-increment: line;
  content: counter(line);

  @apply inline-block w-2 mr-5 text-right text-muted-foreground;
}

.prose code[data-line-numbers-max-digits='2'] > span[data-line]::before {
  @apply w-4;
}
.prose code[data-line-numbers-max-digits='3'] > span[data-line]::before {
  @apply w-6;
}
.prose code[data-line-numbers-max-digits='3'] > span[data-line]::before {
  @apply w-8;
}

/* code block: line highlight */

.prose code span[data-highlighted-line] {
  @apply bg-opacity-25 bg-[#7654ff] border-l-4 border-[#7654ff] pl-[calc(1rem-4px)];
}

.prose mark[data-highlighted-chars] {
  @apply bg-opacity-50 bg-yellow-500;
}

/* code block: title */

.prose figcaption[data-rehype-pretty-code-title] {
  @apply px-5 py-3 text-sm font-bold text-muted-foreground border border-b-0 rounded-t-lg;
}
.prose figcaption[data-rehype-pretty-code-title] + pre {
  @apply mt-0 rounded-t-none;
}

::selection {
  @apply bg-opacity-50 bg-[#7654ff];
}

